<resources>
    <string name="app_name">Flex</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="login">Login</string>
    <string name="email">E-mail</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="login_or_email">Login/E-mail</string>
    <string name="more_menu_icon">\uf142</string>
    <string name="comment_icon">\uf27a</string>
    <string name="fire_icon">\uf06d</string>
    <string name="share_icon">\uf1e0</string>
    <string name="followers_text">Followers</string>
    <string name="followed_text">Followed</string>
    <string name="already_account">Already have an account?</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="write_comment">Write your comment</string>
    <string name="send">Send</string>
    <string name="publish">Publish</string>
    <string name="get_picture">Get picture</string>
    <string name="take_picture">Take picture</string>
    <string name="enter_email">Enter email</string>
    <string name="send_code_email">Send code on email</string>
    <string name="code_email">Code from email</string>
    <string name="new_password">New password</string>
    <string name="change_password">Change password</string>
    <string name="follow">Follow</string>
    <string name="grid">Grid</string>
    <string name="list">List</string>
    <string name="registration">Registration</string>
    <string name="logout">Logout</string>
    <string name="checklog">Checklog</string>
    <string name="change_pass">Change password</string>
    <string name="make_post">Make post</string>
    <string name="write_message">Write your message</string>
    <string name="chat">Chat</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
