<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_icon"
            style="@style/Icon"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_launcher_background" />

        <TextView
            style="@style/Text"
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/user_icon"
            android:layout_alignBottom="@id/user_icon"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_toEndOf="@id/user_icon"
            android:layout_toRightOf="@id/user_icon"
            android:gravity="center_vertical"
            android:text="Name"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/menu_icon"
            style="@style/TextIconSolid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/user_icon"
            android:layout_alignBottom="@id/user_icon"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:text="@string/more_menu_icon"
            android:textSize="30sp" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/main_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_marginHorizontal="15dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background"
        android:layout_weight="1"/>

    <RelativeLayout
        android:id="@+id/below_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp">

        <TextView
            android:id="@+id/fire_icon"
            style="@style/TextIconSolid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/fire_icon"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp" />

        <TextView
            style="@style/Text"
            android:id="@+id/fire_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/fire_icon"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_toEndOf="@id/fire_icon"
            android:layout_toRightOf="@id/fire_icon"
            android:text="1234"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/comments_icon"
            style="@style/TextIconSolid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_toEndOf="@id/fire_count"
            android:layout_toRightOf="@id/fire_count"
            android:text="@string/comment_icon"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp" />

        <TextView
            style="@style/Text"
            android:id="@+id/comments_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/fire_icon"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_toEndOf="@id/comments_icon"
            android:layout_toRightOf="@id/comments_icon"
            android:text="1234"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/share_icon"
            style="@style/TextIconSolid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_toEndOf="@id/comments_count"
            android:layout_toRightOf="@id/comments_count"
            android:text="@string/share_icon"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp" />

        <TextView
            style="@style/Text"
            android:id="@+id/share_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/fire_icon"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_toEndOf="@id/share_icon"
            android:layout_toRightOf="@id/share_icon"
            android:text="1234"
            android:textSize="20sp" />
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_comment_icon"
            style="@style/Icon.Mini"
            android:layout_below="@id/fire_icon"
            android:src="@drawable/ic_launcher_background"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/user_comment_icon"
            android:layout_toEndOf="@id/user_comment_icon"
            android:layout_toRightOf="@id/user_comment_icon"
            android:orientation="vertical">
            <TextView
                style="@style/Text"
                android:id="@+id/user_comment_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="Name:"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/comment_text"
                style="@style/Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="Usual comment to test ellipsize sfsdfsdfgfgsdfgdfgsdfgsdfgsdfgsdfgsdfgsdfg"
                android:textSize="18sp" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>